--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # default config
-baseurl = "https://gym-leader-glink.github.io/blog/"
+baseurl = "http://gym.leader.glink.blog/"
 languageCode = "en-us"
 title = "Gym Leader Glink Blog"
 theme = "parsa-hugo"
@@ -87,7 +87,7 @@ copyright = "Copyright &copy; 2021 Gym.Leader.Glink"
 
 # Instagram feed
 [params.instafeed]
-enable = true
+enable = false
 
 # cookies
 [params.cookies]
