--- a/config.toml
+++ b/config.toml
@@ -88,7 +88,7 @@ copyright = "Copyright &copy; 2021 Gym.Leader.Glink"
 
 # Instagram feed
 [params.instafeed]
-enable = true
+enable = false
 
 # cookies
 [params.cookies]
